hphp/test/zend/good/ext/zip/tests/bug53885.php.skipif
<?hh
<<__EntryPoint>> function main() {
if(!extension_loaded('zip')) die('skip');
}
