hphp/test/zend/bad/ext/zip/tests/bug51353.php.skipif
<?php
if(!extension_loaded('zip')) die('skip');
die('skip the test might get very long, activate it manually');